fix: sel-len badge too big and looks like shit with big border-radius

--- a/src/styles/sidebar/sidebar.styl
+++ b/src/styles/sidebar/sidebar.styl
@@ -404,17 +404,17 @@ for i in 1..16
   position: absolute
   right: 0
   top: 0
-  font-size: rem(12)
-  font-weight: 700
-  padding: 1px 6px
+  font-size: rem(11)
+  font-weight: 400
+  padding: 1px 5px
   color: var(--status-active)
-  border-radius: var(--general-border-radius)
+  border-radius: @css{min(var(--general-border-radius), 4px)}
   background-color: var(--toolbar-bg)
   box-shadow: inset 0 0 0 1px var(--status-active), 0 0 8px 0 #0007
   pointer-events: none
   z-index: 10000
 .CtxMenu .sel-len-teleported
-  top: -10px
+  top: -11px
 
 // ---
 // -- Animations
